# HIROP_ROS-3.0

./: .gitignore  README.md
asr_bridge/: CMakeLists.txt  main.cpp
asr_bridge/src/: main.cpp
dm_bridge/: CMakeLists.txt
dm_bridge/scripts/: test.py
dm_bridge/src/: main.cpp
force_bridge/: CMakeLists.txt  package.xml
force_bridge/config/: forceImp.yaml  forceImpAdjust.yaml
force_bridge/include/force_bridge/: forceService.h
force_bridge/include/motionCoor/: FakeForceSensor.h  MotionCoorServer.h  MotionCoorUlity.h  interPolTool.h
force_bridge/include/motionCoorUlity/: motionCoorUlity.h
force_bridge/launch/: bring_up.launch
force_bridge/src/: MotionCoorNode.cpp  forceService.cpp  motionCoorServer.cpp  shakeHandJudge.cpp
force_bridge/src/motionCoor/: FakeForceSensor.cpp  MotionCoorServer.cpp  MotionCoorUlity.cpp  readme.md
force_bridge/src/motionCoorUlity/: motionCoorUlity.cpp
gripper_bridge/: CMakeLists.txt
gripper_bridge/config/: GripperConfig.yaml  GripperConfig0.yaml  GripperConfig1.yaml  GripperConfig_finger.yaml
gripper_bridge/launch/: gripper_bridge_dual.launch
gripper_bridge/scripts/: five_finger_gripper.sh  gripper.sh  opensensor.sh  serial_gripper.py  serial_gripper_finger.py
gripper_bridge/src/: ros_gripper.cpp
hirop_msgs/: CMakeLists.txt  package.xml
hirop_msgs/msg/: Pose.msg  orderDesc.msg  taskCmdRet.msg
hirop_msgs/srv/: PubMesh.srv  PubObject.srv  addJointPose.srv  addPose.srv  cancelCloudOrder.srv  finishCloudOrder.srv  getCloudOrder.srv  incrementAngle.srv  loadJointsData.srv  loadPoseData.srv  pickPlaceData.srv  removeObject.srv  saveDataEnd.srv  saveJointData.srv  savePoseData.srv  setFromIK.srv  setRobotType.srv  setStartUpProject.srv  setVelocityAccelerated.srv  taskInputCmd.srv  transformFramePose.srv
hirop_msgs/srv/HsFsm/: getFsmTaskList.srv  setFsmTask.srv
hirop_msgs/srv/force_bridge/: ImpedenceAdjustStart.srv
hirop_msgs/srv/hsclouddata/: connectCloud.srv  setCloudKey.srv
hsc3api_bridge/: CMakeLists.txt  CMakeLists.txt.user.2cca755
hsc3api_bridge/include/: ros_hsc3api.h
hsc3api_bridge/launch/: hsc3api_bridge.launch
hsc3api_bridge/src/: main.cpp  ros_hsc3api.cpp
hscFsm_bridge/: CMakeLists.txt  CMakeLists.txt.user.27f43ef  README.md  package.xml
hscFsm_bridge/appTEST/: VisualCaptureRosFunc.cpp  VisualCaptureRosFunc.h  VisualCaptureRosTask.cpp  VisualCaptureRosTask.h  VoiceCtlRobRosFunc.cpp  VoiceCtlRobRosFunc.h  VoiceCtlRobTask.cpp  VoiceCtlRobTask.h  pickplacetask.cpp  pickplacetask.h
hscFsm_bridge/framework/: HsTaskFramework.cpp  HsTaskFramework.h  ThreadPool.h  ThreadSem.h  fsm.hpp  fsmframeworkinterface.h  pickplacetask.cpp  pickplacetask.h
hscFsm_bridge/framework/testFsm/: fsm (copy).hpp
hscFsm_bridge/src/: HsFsmBridge.cpp  HsFsmBridge.h  main.cpp
hscFsm_bridge/uiTest/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ros.pro  uiTest.pro
hscloudcollection_bridge/: .gitmodules  CMakeLists.txt  README  package.xml
hscloudcollection_bridge/include/: hscloudcollection_bridge_node.h  rediscontrol.h
hscloudcollection_bridge/src/: hscloudcollection_bridge_node.cpp  main.cpp  rediscontrol.cpp
hscloudorder_bridge/: CMakeLists.txt  README.en.md  README.md  package.xml
hscloudorder_bridge/include/: hscloudorder_bridge.h  httplib.h  httpmanager.h  utilty.h
hscloudorder_bridge/src/: hscloudorder_bridge.cpp  httpmanager.cpp  main.cpp
motion_bridge/: CMakeLists.txt
motion_bridge/include/: motion.h
motion_bridge/launch/: co605_motion.launch
motion_bridge/src/: main.cpp  motion.cpp
motion_bridge/srv/: moveLine.srv
perception_bridge/: CMakeLists.txt  CMakeLists.txt.user.27f43ef  package.xml  readme.md
perception_bridge/config/: filter.yaml  filter.yaml.back_up
perception_bridge/data/: clean.pcd  live_octomap.ot
perception_bridge/include/: perepionFun.h  planning_scene_builder.h
perception_bridge/lanuch/: test.lanuch
perception_bridge/mesh/: CQtable.stl  HIROP实训与科研型材平台.stl  disc.stl  fiveFinger.stl  gripper.stl  groove.stl  idlerWheel.stl  object.scene  scene.sh  快换铝型材支架.stl  料仓总装.stl  曲面跟随支架总装.stl  货物摆放桌子.stl
perception_bridge/scripts/: 2.py  five_finger_scene.sh  perception_bridge.py  shelf.sh
perception_bridge/src/: main.cpp  perepionFun.cpp  planning_scene_builder.cpp
pickplace_bridge/: CMakeLists.txt
pickplace_bridge/config/: pickData0.yaml  pickData1.yaml  placeData0.yaml  placeData1.yaml  serialGenConfig.yaml  serialPPConfig.yaml  serialPPConfig2.yaml  serialPPMoveGroupConfig.yaml  serialPPMoveGroupConfig1.yaml
pickplace_bridge/double_robot_config/: serialGenConfig01.yaml  serialGenConfig10.yaml  serialGenConfig11.yaml  serialPPConfig10.yaml  serialPPConfig11.yaml  serialPPMoveGroupConfig1.yaml
pickplace_bridge/include/: ros_pickplace.h
pickplace_bridge/launch/: .serial_pickplace_bridge.launch.swp  finger_pickplace_bridge.launch  pickplace_bridge_dual.launch  serial_pickplace_bridge.launch  serial_pickplace_bridge2.launch
pickplace_bridge/src/: main.cpp  ros_pickplace.cpp
planner_bridge/: CMakeLists.txt  package.xml
planner_bridge/config/: Constraints.msg  Constraints.yaml  config.yaml  config2.yaml
planner_bridge/include/planner_bridge/: loadYaml.h  planner.h  planning_bridge.h
planner_bridge/scripts/: test.py  test.sh  test2.sh  test3.sh
planner_bridge/src/: loadYaml.cpp  main.cpp  planner.cpp  planning_bridge.cpp
planner_bridge/srv/: addPose.srv  getTrajectory.srv  incrementAngle.srv
vision_bridge/launch/: vision_bridge_realsense2_ar.launch  vision_bridge_yolo6d-realsense2.launch  vision_bridge_yolo6d_dual.launch  vision_bridge_yolo6d_hand_realsense2.launch
vision_bridge/src/: ros_detector.cpp
